# wof

./: README.md  acquire.ipynb  binance_project.ipynb  folders.ipynb  hinzle_0.ipynb  hinzle_1.ipynb  hinzle_2.ipynb  hinzle_3.ipynb  hinzle_4.ipynb  hinzle_5.ipynb  hinzle_6.ipynb  imports.py  pyproject.toml  toptal_demo.ipynb  toptal_test.ipynb  transaction (1).txt
Crypto Algo/test-crypto-bot/: config.py  test.txt
VS Code/: wreckage.txt
archive/: 101-exercises.ipynb  Wedding.pptx  joins_class_notes.sql  sql_test.sql
deep-learning-project/: fizzbuzz_dl_classifier.ipynb  mnist_dl_classifier.ipynb
ds_imports/: README.md  fume.ipynb  imports.py  pyproject.toml
jupyter/: acquire.ipynb
src/crypto_bot/: .gitignore
utils/: acquire.py  imports.py  imports1.py  model.py  tidy.py
zzz'z/Garcia-Hensley-Nichols-NLP-project/: .gitignore  Nichols_work.ipynb  README.md  acquire.py  acquire_urls.ipynb  explore.ipynb  explore.py  final_report.ipynb  imports.py  model.ipynb  model.py  prepare.ipynb  prepare.py  preprocessing.py
zzz'z/anomaly-detection-exercises/: README.md
zzz'z/archive/: anomaly_detection_quiz.ipynb  python_introduction_exercises.py  seaborn_warmup.ipynb  warmup.ipynb  warmup2_isuppose.ipynb
zzz'z/classification-exercises/: classification_exercises.ipynb  model.ipynb  model_evaluation.ipynb  prepare.py  readme.md  tidy_data.ipynb
zzz'z/classification-project/: .gitignore  acquire.py  exploratory_analysis.ipynb  final_report.ipynb  imports.py  model.py  prepare.py  readme.md
zzz'z/clustering-exercises/: .gitignore  README.md  explore_zillow.ipynb  (+4 more)
(+148 files in other folders)
